# parserlib

./: CMakeLists.txt  README.md
.github/workflows/: ctest.yml  release.yml
include/: parser.hpp
pal/: ifactory.hpp  iparser.hpp
pal_bridge/: palfactory.cpp  palfactory.hpp
src/: CMakeLists.txt  Parser.cpp  libcommon_external_proj.cmake
tests/: CMakeLists.txt
tests/Parser/: CMakeLists.txt  ParserTest.cpp  main.cpp
tests/Parser/include/: parserTest.hpp
tests/include/: my.hpp
